Issue #6 Fix viewing issues on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 html, body {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
+  width: 100%;
 }
+
 .container {
   width: 95vw;
-  min-height: 75vh;
+  min-height: 70vh;
   margin: 5vh auto;
   display: flex;
   position: relative;
@@ -22,11 +24,10 @@ html, body {
   background-color: white;
   border-radius: 10px;
   box-shadow: 3px 3px 10px 10px #777777;
-  height: 80%;
+  height: 90%;
   min-width: 20vw;
-  max-height: 700px;
   position: absolute;
-  top: 10%;
+  top: 5%;
   left: 0px;
   z-index: 20;
   padding: 10px;
@@ -35,11 +36,10 @@ html, body {
   background-color: white;
   border-radius: 10px;
   box-shadow: 3px 3px 10px 10px #777777;
-  height: 80%;
+  height: 90%;
   min-width: 20vw;
-  max-height: 700px;
   position: absolute;
-  top: 10%;
+  top: 5%;
   right: 0px;
   z-index: 20;
   padding: 10px;
@@ -56,9 +56,10 @@ html, body {
   flex-direction: column-reverse;
 }
 .logo {
-  width: 30vw;
-  position: absolute;
-  left: 2vw;
+  width: 45vw;
+  position: fixed;
+  left: -4vw;
+  top: 0vw;
   z-index: 120;
 }
 .collective {
